--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/andersspn/aplicacao-node#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.2",
     "mongoose": "^5.12.13",
     "mustache-express": "^1.3.1"
   }
