--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.17.2",
     "mongoose": "^5.12.13",
-    "mustache-express": "^1.3.1"
+    "mustache-express": "^1.3.1",
+    "slug": "^5.0.1"
   }
 }
