--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "aplicacao-node",
+  "name": "projetonode",
   "version": "1.0.0",
   "scripts": {
     "start": "nodemon ./server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://andersspn@bitbucket.org/andersspn/aplicacao-node.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "homepage": "https://bitbucket.org/andersspn/aplicacao-node#readme",
   "dependencies": {
-    "cookie-parser": "^1.4.5",
-    "dotenv": "^10.0.0",
+    "cookie-parser": "^1.4.4",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
-    "express-session": "^1.17.2",
-    "mongoose": "^5.12.13",
-    "mustache-express": "^1.3.1",
-    "slug": "^5.0.1"
+    "express-session": "^1.16.2",
+    "jimp": "^0.8.2",
+    "mongoose": "^5.6.7",
+    "multer": "^1.4.2",
+    "mustache-express": "^1.2.8",
+    "slug": "^1.1.0",
+    "uuid": "^3.3.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
