filtro e funçao de email

--- a/variables.env
+++ b/variables.env
@@ -2,3 +2,9 @@ NODE_ENV=development
 PORT=7777
 DATABASE=mongodb://127.0.0.1:27017/clientes
 SECRET=123
+SMTP_HOST=smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_USER=fa9e16d358ac92
+SMTP_PASS=46e4b05dec0c9f
+SMTP_NAME=ANDERSSON
+SMTP_EMAIL=andersson.brito@wattei.com.br
