--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "mongoose": "^5.6.7",
     "multer": "^1.4.2",
     "mustache-express": "^1.2.8",
+    "nodemailer": "^6.6.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "slug": "^1.1.0",
     "uuid": "^3.3.3"
   },
